# cmake-template

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  event_center.h  main.cpp
src/common/: CMakeLists.txt
src/common/thread/: mutex.h
src/common/utils/: id_generator.h  macro.h  singleton.h  socket.cpp  socket.h
src/server/: CMakeLists.txt  event_center.cpp  main.cpp
